rusty-cdk-macros/tests/fails/env_var_key_starts_with_underscore.rs
use rusty_cdk_macros::env_var_key;

fn example() {
    let key = env_var_key!("_INVALID");
}

fn main() {}