rusty-cdk-macros/tests/fails/env_var_key_starts_with_underscore.stderr
error: env var key should not start with an underscore
 --> tests/fails/env_var_key_starts_with_underscore.rs:4:28
  |
4 |     let key = env_var_key!("_INVALID");
  |                            ^^^^^^^^^^
